--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/google.maps": "^3.58.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.6.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
